nova coluna de clientes ativo